Removed all existing files from repository